--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,5 @@ cython_debug/
 #.idea/
 JarFiles/*.jar
 DbSecrets/DbCredentials.json
+DbCertificates/ibm-truststore.jks
+DbCertificates/CERT.cert
